# Call-Me-Maybe

./: Makefile  README.md  mypy.ini  pyproject.toml
data/input/: function_calling_tests.json
data/output/: function_calling_results.json
src/: ConstrainingDecoder.py  GenerationPipeline.py  InputParser.py  PipelineManager.py  __init__.py  __main__.py
src/llm_sdk/llm_sdk/: __init__.py
