[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pydantic>=2.13.2",
    "llm_sdk @ file:///${PROJECT_ROOT}/src/llm_sdk",
    "flake8>=7.3.0",
	"flake8-pyproject",
    "mypy>=1.20.1",
]

[tool.mypy]
exclude = [
	"src/llm_sdk/",
	".venv"
]

[tool.flake8]
exclude = [
    "src/llm_sdk",
	".venv"
]
